@@ -8,6 +8,8 @@ FEATURES:
 	- optimised zonefile parse code and zonefile write code.
 	- zonefiles-write option in nsd.conf, enabled when database is "".
 	  The server writes changed zonefiles to disk every hour.
+	- xfrdfile: "" disables xfrd.state.  If enabled, zones that are
+	  same as before are not checked for a serial update at server start.
 BUG FIXES:
 
 
