@@ -67,7 +67,7 @@ server:
 
 	# The file where secondary zone refresh and expire timeouts are kept.
 	# If you delete this file, all secondary zones are forced to be 
-	# 'refreshing' (as if nsd got a notify).  Unused if database is "".
+	# 'refreshing' (as if nsd got a notify).  Set to "" to disable.
 	# xfrdfile: "@xfrdfile@"
 
 	# The directory where zone transfers are stored, in a subdir of it.
